Adding Mastodon verification link

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -5,4 +5,6 @@
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 <link rel="icon" type="image/svg+xml" href="{{ '/images/favicon.svg' | relative_url }}">
 <link rel="icon" type="image/png" href="{{ '/images/favicon.png' | relative_url }}">
+<!-- verify social media profiles -->
+<link rel="me" href="https://mstdn.ca/@ChrisCScott">
 <!-- end custom head snippets -->
